Fix up some spacing on home page

--- a/theme/static/scss/_index.scss
+++ b/theme/static/scss/_index.scss
@@ -1,6 +1,6 @@
 .content.title-content {
   padding-top: 0.5em;
-  padding-bottom: 1.6em;
+  padding-bottom: 2.5em;
   margin-bottom: 0;
   .title {
     margin: 0.5em 0 0 0;
@@ -65,10 +65,11 @@
 }
 
 .value-prop {
-  margin-top: 1.5em;
-  margin-bottom: 2em;
   .lead {
     color: $pink;
     font-size: 1em * (22/14)
+  }
+  &:first-child {
+    padding-top: 1em;
   }
 }
